# flutter_rust_bridge

frb_example/dart_minimal/: frb_generated.h
frb_example/dart_minimal/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
frb_example/dart_minimal/lib/src/rust/api/: minimal.dart  wallet.dart
frb_example/dart_minimal/lib/src/rust/api/time/: native.dart
frb_example/dart_minimal/rust/: Cargo.toml
frb_example/dart_minimal/rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
frb_example/dart_minimal/rust/src/api/: minimal.rs  mod.rs  wallet.rs
frb_example/dart_minimal/rust/src/api/time/: native.rs  web.rs
